@@ -188,3 +188,4 @@ hacking/ChangeLog: the small scale changelog for libspectrum
 20040320 accessor.pl,snap_accessors.txt,szx.c: add support for the Beta
 	 128 block of the .szx format.
 20040320 libspectrum.c,libspectrum.h.in: add an 'Even M1' capability.
+20040401 libspectrum.h.in,sna.c,szx.c,z80.c: minimalistic +3e support.
